FEAT : StorageService.store 파라미터 경로로 수정